Removed lombok